2006-01-12 13:40 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridFindEnclosingCell) follow into
	gridFindClosestBoundaryCell.	
	* src/grid.c (gridFindClosestBoundaryCell) initialize 
	gridFindClosestBoundaryFace and translate back into cell.
	* src/grid.c (gridFindClosestBoundaryFace) navigates boundary faces.
	* src/grid.c (gridBarycentricCoordinateTri) bary coor for faces
	* src/grid.c (gridProjectToTriangle) snap point to tri 
	(should be in grid math)

2006-01-11 14:35 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerSwap) lower gridMinSwapCost and
	gridMinSwapCostImprovement to get more swaps.

2006-01-11 14:25 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridMinSwapCost,gridMinSwapCostImprovement) store
	the swap cost limits in the Grid struct.
	* src/gridswap.c (gridMinSwapCost,gridMinSwapCostImprovement) use
	instead of COSTLIMIT and REQUIRED_IMPROVEMENT.

2006-01-11 08:35 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridAdaptVolumeEdges) only split long volume edges.
	* src/unit_main.c (main) --phase -3: call gridAdaptVolumeEdges to 
	complete test case.

2006-01-10 16:16 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) --phase -3: added but not happy yet.

2006-01-10 13:29 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) --phase -2: put together swap and split ops.
	* src/gridfacer.c (gridfacerRatioRange) longest and shortest
	interior edges.

2006-01-10 13:45 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridFindEnclosingCell) silently ignore unable to find
	next cell due to boundary.

2006-01-10 13:29 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerSplit) split long edges.

2006-01-10 11:56 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerRemoveEdge) to remove and edge from
	current list.
	* src/gridfacer.c (gridfacerSwap) to swap to improve edge length.

2006-01-10 11:15 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerSwap) started swapping routine to